--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Noto Sans JP', sans-serif;
     font-size: 1.5rem;
     color: #383e45;
-}
+}s
 
 a {
     text-decoration: none;
@@ -67,6 +67,17 @@ nav ul li a:hover {
     color: #fff;
 }
 
+/*
+#concept {
+    position: relative;
+    width: 100%;
+    height: 750px;
+    background-image: url(../images/band_2.JPG);
+    background-size: cover;
+    color: #fff;
+}   
+*/
+
 #fv .fv_in {
     position: absolute;
     z-index: 1;
@@ -100,6 +111,11 @@ h2 span {
 
 .wrap_1000 {
     width: 1000px;
+    margin: 0 auto;
+}
+
+.wrap_1240 {
+    width: 1240px;
     margin: 0 auto;
 }
 
@@ -175,6 +191,8 @@ p {
     border-radius: 30px 0 0 30px;
 }
 
+
+
 #concept .lecture_box {
     margin: 0 30px;
 }
@@ -196,4 +214,47 @@ p {
     background-color: #f5f5f5;
     padding: 30px;
     margin: 0 0 30px 0;
+}
+
+#do .bg_gray {
+    width: 100%;
+    height: 380px;
+    background-color: #f5f5f5;
+    position: relative;
+    margin: 390px 0 0 0;
+}
+
+#do .bg_gray .card_in {
+    position: absolute;
+    top: -250px;
+    left: 0;
+    right: 0;
+}
+
+#do .bg_gray article {
+    width: calc(25% - 13px);
+    margin-right: 50px;
+}
+
+#do .bg_gray article:last-child {
+    margin-right: 0;
+}
+
+#do .bg_gray .card_img {
+    display: flex;
+    flex-direction: column-reverse;
+}
+/*
+#do .bg_gray img {
+    width: 50%;
+    height: 200px;
+    object-fit: cover;
+    background-size: cover;
+}
+*/
+#do .bg_gray article h3 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #fff;
+    margin: 25px 0;
 }
