--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ nav ul li a:hover {
     background-image: url(../images/profile_18.JPG);
     background-size: cover;
     color: #fff;
+    background-position: center;
 }
 
 /*
@@ -163,6 +164,7 @@ p {
     right: 10px;
     background-color: #000;
     transition: 0.3s;
+}
 
 .link_btn::before {
     font-family: 'Font Awesome 6 Free';
@@ -232,8 +234,12 @@ p {
 }
 
 #do .bg_gray article {
+    margin: 0 20px;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 15px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     width: calc(25% - 13px);
-    margin-right: 50px;
 }
 
 #do .bg_gray article:last-child {
@@ -244,17 +250,74 @@ p {
     display: flex;
     flex-direction: column-reverse;
 }
-/*
-#do .bg_gray img {
-    width: 50%;
-    height: 200px;
-    object-fit: cover;
-    background-size: cover;
+
+.card_img img {
+    width: 200px;
+    height: auto;
+    border-radius: 15px;
+    margin: 20px;
 }
-*/
+
 #do .bg_gray article h3 {
     font-size: 2.5rem;
     font-weight: bold;
     color: #fff;
     margin: 25px 0;
 }
+
+/* その他の画像サイズ調整 */
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+/*request*/
+.form_table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin: 0 0 20px 0;
+}
+
+.form_table ul li {
+    list-style: none;
+    margin: 00 10px 0;
+}
+
+th, td {
+    border-bottom: 1px solid #383e45;
+    vertical-align: middle;
+}
+
+th {
+    text-align: left;
+    font-weight: normal;
+}
+
+th:first-child,
+td {
+    width: 320px;
+    padding: 35px 40px;
+}
+
+th:first-child,
+td:nth-child(odd) {
+    font-size: 1.7rem;
+    font-weight: 600;
+    background-color: #f5f5f5;
+}
+
+th:last-child,
+td:nth-child(even) {
+    width: 520px;
+}
+
+.surely,
+.any {
+    font-size: 1.2rem;
+    font-weight:normal;
+    color: #fff;
+    padding: 8px;
+    float: right;
+    margin: -10px 0 0 0;
+}
+
