--- a/css/style.css
+++ b/css/style.css
@@ -321,3 +321,72 @@ td:nth-child(even) {
     margin: -10px 0 0 0;
 }
 
+.surely {
+    background-color: #383e45;
+}
+
+.any {
+    background-color: #000;
+}
+
+.form_text,
+.form_text_s {
+    height: 30px;
+}
+
+.form_text {
+    width: 100%;
+}
+
+.form_text_s {
+    width: 30%;
+}
+
+.form_text_b {
+    width: 100%;
+    height: 19rem;
+    border: 1px solid #383e45;
+}
+
+input[type="radio"] {
+    width: 3rem;
+    height: 3rem;
+    vertical-align: middle;
+    margin: 0 10px 0 30px;
+}
+
+input[type="radio"]:first-child {
+    margin-left: 0;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    padding: 10px;
+    border: 1px solid #383e45;
+}
+
+#request input[type="checkbox"] {
+    width: 30px;
+    height: 30px;
+    margin: 0 1px 0 0;
+}
+
+.privacy_box {
+    width: 100%;
+    height: 190px;
+    overflow: auto;
+    background: #f5f5f5;
+    border: 1px solid #383e45;
+    padding: 10px;
+    margin: 0 0 10px 0;
+}
+
+.privacy_box p {
+    margin: 0 0 40px 0;
+}
+
+.privacy_box h3 {
+    font-size: 1.8rem;
+    margin: 0 0 15px 0;
+}
