--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,30 @@ body {
     font-family: 'Noto Sans JP', sans-serif;
     font-size: 1.5rem;
     color: #383e45;
-}s
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    transition: all 0.4s ease;
+}
 
 a {
     text-decoration: none;
+}
+
+@media only screen and (max-width: 375px) {
+    img {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    body {
+        font-size: 1.7rem;
+    }
 }
 
 /* header */
@@ -122,6 +142,14 @@ h2 span {
 .wrap_1240 {
     width: 1240px;
     margin: 0 auto;
+}
+
+@media only screen and (max-width: 1239px) {
+    .wrap_1000,
+    .wrap_1240 {
+        width: auto;
+        padding: 0 30px;
+    }
 }
 
 .mt14 {
@@ -459,12 +487,11 @@ footer .wrap_1000 p {
 /*ページに戻る*/
 
 
-#pagetop img {
+footer img {
     width: 20%;
     height: 20%;
     border-radius: 50%;
 }
-
 
 #pagetop a:hover {
     background-color: #000;
