--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,94 @@ nav ul li a:hover {
     color: #000;
 }
 
+/* ハンバーガーメニュー */
+@media only screen and (max-width: 1200px) {
+#head_in {
+    display: block;
+}
+
+#head_in .logo img {
+    width: 247px;
+    margin: 25px 36px 25px 0;
+}
+
+nav ul {
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+nav ul li {
+    font-size: 2rem;
+    padding: 0 0 0 30px;
+}
+
+nav ul li:last-child a {
+    display: block;
+    color: #fff;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 40px;
+    padding: 2.5rem 0;
+    margin: 40px 30px 0 0;
+}
+
+nav ul li:last-child a::before {
+    font-family: 'Font Awesome 6 Free';
+    content: "\f105";
+    font-size: 1.6rem;
+    margin: 0 15px 0 0;
+}
+
+header {
+    position: relative;
+}
+
+nav .label {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: #383e45;
+    z-index: 100;
+    cursor: pointer;
+}
+
+nav span {
+    width: 40px;
+    height: 3px;
+    position: absolute;
+    background-color: #fff;
+    right: 20px;
+    z-index: 200;
+  }
+  nav .border1 {
+    top: 26px;
+  }
+  nav .border2 {
+    top: 36px;
+  }
+  nav .border3 {
+    top: 46px;
+  }
+
+nav .text {
+    overflow: hidden;
+    height: 0;
+    margin: 0 0 0 0;
+}
+  
+nav .check:checked + .label + .text {
+    position: absolute;
+    z-index: 10;
+    width: 100%;
+    height: 300px;
+    background: #383e45;
+}
+}
+  
+
+
 
 /* first view */ 
 #fv {
