--- a/css/style.css
+++ b/css/style.css
@@ -54,29 +54,33 @@ nav ul li {
     font-size: 1.6rem;
     font-weight: bold;
     list-style: none;
-    margin: 34px 70px 0 0;
+    margin: 34px 34px 15px 0;
 }
 
-nav ul li:last-child { 
-    margin: 0;
-}
+/*nav ul li:last-child { 
+    margin: 10px 0 0 0;
+}*/
 
 nav ul li a {
     color: #383e45;
 }
 
-nav ul li:last-child a {
+/*nav ul li:last-child a {
     display: block;
     color: #fff;
-    background-color: #383e45;
+    background-color: #a3c9f3;
     padding: 34px 38px;
-}
+}*/
 
 nav ul li a:hover {
     color: #000;
 }
 
 /* ハンバーガーメニュー */
+
+.check {
+    display: none;
+}
 @media only screen and (max-width: 1200px) {
 #head_in {
     display: block;
@@ -97,22 +101,23 @@ nav ul li {
     padding: 0 0 0 30px;
 }
 
-nav ul li:last-child a {
+/*nav ul li:last-child a {
     display: block;
-    color: #fff;
+    color: #0c0b0b;
     text-align: center;
     background-color: #fff;
     border-radius: 40px;
     padding: 2.5rem 0;
     margin: 40px 30px 0 0;
 }
+*/
 
-nav ul li:last-child a::before {
+/*nav ul li:last-child a::before {
     font-family: 'Font Awesome 6 Free';
     content: "\f105";
     font-size: 1.6rem;
     margin: 0 15px 0 0;
-}
+}*/
 
 header {
     position: relative;
@@ -124,7 +129,7 @@ nav .label {
     position: absolute;
     right: 0;
     top: 0;
-    background-color: #383e45;
+    background-color: #c4cdd6;
     z-index: 100;
     cursor: pointer;
 }
@@ -158,7 +163,7 @@ nav .check:checked + .label + .text {
     z-index: 10;
     width: 100%;
     height: 300px;
-    background: #383e45;
+    background: #5b9ce6;
 }
 }
   
