--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,25 @@ nav .check:checked + .label + .text {
     padding: 40px 40px 0 40px;
 }
 
+@media only screen and (max-width: 600px) {
+    #fv {
+        height: 60rem;
+        background: url(../images/profile_18.JPG) no-repeat center center;
+        background-size:cover;
+        color: #fff;
+    }
+
+    #fv .catchcopy {
+        bottom: 50px;
+        border-top-left-radius: 30px;
+        padding: 30px 30px 0 30px;
+    }
+    .sp {
+        display: none;
+    }
+}
+
+
 #fv h1 {
     font-size: 3rem;
     line-height: 1.5;
@@ -263,6 +282,7 @@ h2 span {
 
 p {
     line-height: 1.7;
+    font-size: 1.6rem;
 }
 
 .flex {
@@ -308,6 +328,19 @@ button:hover {
     text-align: center;
 }
 
+@media only screen and (max-width: 1024px) {
+    .link_btn,
+    button {
+        font-size: 1.7rem;
+        border-radius: 40px;
+        padding: 25px 0;
+    }
+
+    .btn {
+        width: 100%;
+    }
+}
+
 .link_btn::before,
 button::before {
     font-family: 'Font Awesome 6 Free';
@@ -342,6 +375,38 @@ button::before {
     margin: 0 30px;
 }
 
+@media only screen and (max-width: 1200px) {
+    #concept  {
+        margin: 90px 0 0 0 ;
+    }
+
+    #concept h3 {
+        margin: 25px 0 20px 0;
+    }
+
+    #concept .flex {
+        width: auto;
+        padding: 0 30px;
+    }
+    .concept .lecture_box {
+        margin: 0;
+    }
+
+    #concept .lexcure_img img,
+    #concept .lecture_img_1 img {
+        width: 100%;
+        border-radius: 30px;
+    }
+
+    .flex_right {
+        flex-direction: column-reverse;
+    }
+
+    .flex_d_row_re {
+        flex-direction: column-reverse;
+    }
+}
+
 .gray_bg_title {
     font-size: 2rem;
     font-weight: 700;
@@ -359,6 +424,23 @@ button::before {
     background-color: #f5f5f5;
     padding: 30px;
     margin: 0 0 30px 0;
+}
+
+@media only screen and (max-width: 1300px) {
+    .intro_box {
+        width: auto;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .intro_box {
+        flex-direction: column-reverse;
+    }
+
+    .intro_box .mr3 {
+        text-align: center;
+        margin: 0 0 10px 0;
+    } 
 }
 
 #do .bg_gray {
@@ -387,6 +469,36 @@ button::before {
 
 #do .bg_gray article:last-child {
     margin-right: 0;
+}
+
+@media only screen and (max-width: 1240px) {
+    #do img {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 999px) {
+    #do .bg_gray {
+        width: 100%;
+        height: auto;
+        padding: 80px 0 0 0;
+        margin: 140px 0 0 0;
+    }
+
+    #do .bg_gray .card_in {
+        position: relative;
+        top: 0;
+        left: 0;
+        right: 0;
+    }
+    #do .flex {
+        flex-direction: column;
+    }
+
+    #do .bg_gray article {
+        width: 100%;
+        margin: 0 0 100px 0;
+    }
 }
 
 #do .bg_gray .card_img {
@@ -454,6 +566,21 @@ td:nth-child(even) {
     width: 520px;
 }
 
+@media only screen and (max-width: 999px) {
+    th, td {
+        border-bottom: none;
+        display: block;
+        width: auto;
+    }
+
+    th:first-child,
+    th:last-child ,
+    td:nth-child(even) {
+        width: auto;
+        padding: 35px 20px 35px0;
+    }
+}
+
 .surely,
 .any {
     font-size: 1.2rem;
@@ -476,6 +603,11 @@ td:nth-child(even) {
 .form_text_s {
     height: 30px;
 }
+
+@media only screen and (max-width: 999px) {
+    .form_text_s {
+        width: 100%;
+    }
 
 .form_text {
     width: 100%;
@@ -500,6 +632,12 @@ input[type="radio"] {
 
 input[type="radio"]:first-child {
     margin-left: 0;
+}
+
+@media only screen and (max-width: 999px) {
+    input[type="radio"] {
+        margin: 0 10px 0 10px;
+    }
 }
 
 input[type="text"],
@@ -553,6 +691,22 @@ textarea {
     margin: 0 0 0 5px;
 }
 
+@media only screen and (max-width: 1220px) {
+    #access .access_in {
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #access .access_in .tel {
+        margin: 0 0 20px 0;
+    }
+
+    #access .access_in img {
+        width: 100%;
+    }
+}
+
 /*footer*/
 
 footer{
@@ -573,6 +727,16 @@ footer .wrap_1000 .logo {
 footer .wrap_1000 p {
     color: #fff;
     padding: 0 0 15px 0;
+}
+
+@media only screen and (max-width: 375px) {
+    footer .wrap_1000 p {
+        font-size: 1.4rem;
+    }
+
+    footer .wrap_1000 .logo {
+        margin: 0 20px 60px 20px;
+    }
 }
 
 
@@ -613,5 +777,11 @@ footer img {
     margin: auto;
     text-align: center;
     transition: 0.3s;
-  }
+}
 
+@media only screen and (max-width: 375px) {
+    #pagetop {
+        right: 10px;
+        bottom: 10px;
+    }
+}
