--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ nav ul li a:hover {
 .check {
     display: none;
 }
+
 @media only screen and (max-width: 1200px) {
 #head_in {
     display: block;
@@ -514,7 +515,7 @@ button::before {
     width: 200px;
     height: auto;
     border-radius: 15px;
-    margin: 20px;
+    margin: auto;
 }
 
 #do .bg_gray article h3 {
@@ -525,12 +526,22 @@ button::before {
 }
 
 /* その他の画像サイズ調整 */
-img {
+/* img {
     max-width: 100%;
     height: auto;
-}
+} */
 
 /*request*/
+
+#request {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+#request table {
+    margin: auto;
+}
+
 .form_table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -713,9 +724,9 @@ textarea {
 
 /*footer*/
 
-footer{
+footer {
     width: 100%;
-    background-color: #242526;
+    background-color: #383e45;
 }
 
 footer .wrap_1000 {
@@ -724,16 +735,41 @@ footer .wrap_1000 {
 }
 
 footer .wrap_1000 .logo {
-    display: block;
+    display: inline-block;
     margin: 0 0 60px 0;
-    width: 80px;
-    height: 80px;
-} 
+    max-width: 80px;
+}
 
 footer .wrap_1000 .logo img {
-    width: 80px;
-    height: 80px;
+    width: 100%;
+    height: 100%;
+    max-width: 80px;
+    max-height: 80px;
     border-radius: 50%;
+    object-fit: cover;
+    display: block;
+}
+
+/* 大画面用のスタイル */
+@media only screen and (min-width: 1200px) {
+    footer .wrap_1000 .logo {
+        max-width: 60px;
+    }
+    footer .wrap_1000 .logo img {
+        max-width: 60px;
+        max-height: 60px;
+    }
+}
+
+/* 小画面用のスタイル */
+@media only screen and (max-width: 375px) {
+    footer .wrap_1000 .logo {
+        max-width: 50px;
+    }
+    footer .wrap_1000 .logo img {
+        max-width: 50px;
+        max-height: 50px;
+    }
 }
 
 footer .wrap_1000 p {
@@ -761,11 +797,14 @@ footer .logo {
     height: 80px;
 }
 
-footer .logo img {
-    width: 80px;
-    height: 100px;
-    border-radius: 50%;
-}
+
+/* footer .logo */
+/* img {
+    border-radius: 50%; 
+    object-fit: cover;  
+    display: inline-block;
+   margin-bottom: 10px;
+} */
 
 
 #pagetop a:hover {
@@ -803,3 +842,6 @@ footer .logo img {
         bottom: 10px;
     }
 }
+
+/* ロゴのサイズを調整 */
+/* footerの部分の画像がフルスクリーンだと視覚行く画面いっぱいに広がってしまう原因がわかりません。 */
