--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ body {
     transition: all 0.4s ease;
 }
 
+header {
+    position: relative;
+}
+
 a {
     text-decoration: none;
 }
@@ -41,7 +45,7 @@ a {
     justify-content: space-between;
 }
 
-#head_in .logo {
+#head_in .header__head--a {
     margin: 20px 0 0 40px;
 }
 
@@ -78,7 +82,7 @@ nav ul li a:hover {
 
 /* ハンバーガーメニュー */
 
-.check {
+.nav__head {
     display: none;
 }
 
@@ -87,7 +91,7 @@ nav ul li a:hover {
     display: block;
 }
 
-#head_in .logo img {
+#head_in .header__head--a img {
     width: 247px;
     margin: 25px 36px 25px 0;
 }
@@ -120,10 +124,6 @@ nav ul li {
     margin: 0 15px 0 0;
 }*/
 
-header {
-    position: relative;
-}
-
 nav .label {
     width: 80px;
     height: 80px;
@@ -143,23 +143,23 @@ nav span {
     right: 20px;
     z-index: 200;
   }
-  nav .border1 {
+  nav .nav__head-list__item {
     top: 26px;
   }
-  nav .border2 {
+  nav .nav__head-list__item {
     top: 36px;
   }
-  nav .border3 {
+  nav .nav__head-list__item {
     top: 46px;
   }
 
-nav .text {
+nav .nav__foot {
     overflow: hidden;
     height: 0;
     margin: 0 0 0 0;
 }
   
-nav .check:checked + .label + .text {
+nav .nav__head:checked + .label + .text {
     position: absolute;
     z-index: 10;
     width: 100%;
@@ -195,7 +195,7 @@ nav .check:checked + .label + .text {
 }   
 */
 
-#fv .fv_in {
+#fv .header__foot-head {
     position: absolute;
     z-index: 1;
     bottom: 0;
@@ -247,56 +247,7 @@ h2 span {
     color: #000;
 }
 
-.wrap_1000 {
-    width: 1000px;
-    margin: 0 auto;
-}
 
-.wrap_1240 {
-    width: 1240px;
-    margin: 0 auto;
-}
-
-@media only screen and (max-width: 1239px) {
-    .wrap_1000,
-    .wrap_1240 {
-        width: auto;
-        padding: 0 30px;
-    }
-}
-
-.mt5 {
-    margin-top: 50px;
-}
-
-.mt14 {
-    margin-top: 140px;
-}
-
-.mr3 {
-    margin-right: 30px;
-}
-
-.mb4 {
-    margin-bottom: 40px;
-}
-
-.t_center {
-    text-align: center;
-}
-
-p {
-    line-height: 1.7;
-    font-size: 1.6rem;
-}
-
-.flex {
-    display: flex;
-}
-
-.flex_right {
-    justify-content: flex-end;
-}
 
 .link_btn,
 button {
@@ -376,7 +327,7 @@ button::before {
 
 
 
-#concept .lecture_box {
+#concept .body__body-head {
     margin: 0 30px;
 }
 
@@ -393,7 +344,7 @@ button::before {
         width: auto;
         padding: 0 30px;
     }
-    .concept .lecture_box {
+    .concept .block__body-head {
         margin: 0;
     }
 
@@ -421,7 +372,7 @@ button::before {
     padding: 14px 30px;
 }
 
-.intro_box {
+.block__body-head_body {
     width: 588px;
     display: flex;
     justify-content: flex-end;
@@ -432,17 +383,17 @@ button::before {
 }
 
 @media only screen and (max-width: 1300px) {
-    .intro_box {
+    .bloxk__body-head_body {
         width: auto;
     }
 }
 
 @media only screen and (max-width: 600px) {
-    .intro_box {
+    .block__body-head_body {
         flex-direction: column-reverse;
     }
 
-    .intro_box .mr3 {
+    .block__body-head_body .mr3 {
         text-align: center;
         margin: 0 0 10px 0;
     } 
@@ -506,12 +457,12 @@ button::before {
     }
 }
 
-#do .bg_gray .card_img {
+#do .bg_gray .do__item {
     display: flex;
     flex-direction: column-reverse;
 }
 
-.card_img img {
+.do__item img {
     width: 200px;
     height: auto;
     border-radius: 15px;
@@ -734,28 +685,27 @@ footer .wrap_1000 {
     padding: 60px 0 0 0;
 }
 
-footer .wrap_1000 .logo {
+footer .footer__body .logo {
     display: inline-block;
-    margin: 0 0 60px 0;
-    max-width: 80px;
+    margin: 10px 50px 20px;
 }
 
-footer .wrap_1000 .logo img {
-    width: 100%;
-    height: 100%;
+footer .footer__body .logo img {
+    width: 60%;
+    height: 60%;
     max-width: 80px;
     max-height: 80px;
-    border-radius: 50%;
+    border-radius: 20%;
     object-fit: cover;
     display: block;
 }
 
 /* 大画面用のスタイル */
 @media only screen and (min-width: 1200px) {
-    footer .wrap_1000 .logo {
+    footer .footer__body .logo {
         max-width: 60px;
     }
-    footer .wrap_1000 .logo img {
+    footer .footer__body .logo img {
         max-width: 60px;
         max-height: 60px;
     }
@@ -763,26 +713,26 @@ footer .wrap_1000 .logo img {
 
 /* 小画面用のスタイル */
 @media only screen and (max-width: 375px) {
-    footer .wrap_1000 .logo {
+    footer .footer__body .logo {
         max-width: 50px;
     }
-    footer .wrap_1000 .logo img {
+    footer .footer__body .logo img {
         max-width: 50px;
         max-height: 50px;
     }
 }
 
-footer .wrap_1000 p {
+footer .footer__body p {
     color: #fff;
     padding: 0 0 15px 0;
 }
 
 @media only screen and (max-width: 375px) {
-    footer .wrap_1000 p {
+    footer .footer__body p {
         font-size: 1.4rem;
     }
 
-    footer .wrap_1000 .logo {
+    footer .footer__body .logo {
         margin: 0 20px 60px 20px;
     }
 }
@@ -822,7 +772,7 @@ footer .logo {
     border-radius: 50%;
   }
   #pagetop a::before {
-  position: absolute;
+    position: absolute;
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
     content: '\f106';
@@ -845,3 +795,54 @@ footer .logo {
 
 /* ロゴのサイズを調整 */
 /* footerの部分の画像がフルスクリーンだと視覚行く画面いっぱいに広がってしまう原因がわかりません。 */
+
+.wrap_1000 {
+    width: 1000px;
+    margin: 0 auto;
+}
+
+.wrap_1240 {
+    width: 1240px;
+    margin: 0 auto;
+}
+
+@media only screen and (max-width: 1239px) {
+    .wrap_1000,
+    .wrap_1240 {
+        width: auto;
+        padding: 0 30px;
+    }
+}
+
+.mt5 {
+    margin-top: 50px;
+}
+
+.mt14 {
+    margin-top: 140px;
+}
+
+.mr3 {
+    margin-right: 30px;
+}
+
+.mb4 {
+    margin-bottom: 40px;
+}
+
+.t_center {
+    text-align: center;
+}
+
+p {
+    line-height: 1.7;
+    font-size: 1.6rem;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex_right {
+    justify-content: flex-end;
+}
