--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <meta name="robots" content="noidex, nofollow" />
     <meta name="description" content="自己紹介サイトです。" />
     <title>自己紹介ページ・サイト</title>
-    <link rel="stylesheet" href="css/html5reset-1.6.1.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/html5reset-1.6.1.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 <body>
     <header id="home">
         <div class="header__head" id="head_in">
-            <a href="./" class="header__head--a"><img src="images/logo.png" alt="logo" class="header__head--a"></a>
+            <a href="./" class="header__head--a"><img src="{{ url_for('static', filename='images/logo.png') }}" alt="logo" class="header__head--a"></a>
             <nav class="nav">
                 <input type="checkbox" class="nav__head" id="check-a">
                     <label for="check-a" class="nav__head-list">
@@ -81,19 +81,19 @@
                         <article>
                             <div class="do__item">
                                 <h3>HTML</h3>
-                                <img src="images/HTML.png" alt="HTML" class="img">
+                                <img src="{{ url_for('static', filename='images/HTML.png') }}" alt="HTML" class="img">
                             </div>
                         </article>
                         <article>
                             <div class="do__item">
                                 <h3>CSS</h3>
-                                <img src="images/CSS.png" alt="CSS" class="img">
+                                <img src="{{ url_for('static', filename='images/CSS.png') }}" alt="CSS" class="img">
                             </div>
                         </article>
                         <article>
                             <div class="do__item">
                                 <h3>JavaScript</h3>
-                                <img src="images/JavaScript.png" alt="JavaScript" class="img">
+                                <img src="{{ url_for('static', filename='images/JavaScript.png') }}" alt="JavaScript" class="img">
                             </div>
                         </article>
                         <article>
