Update footer logo image in index.html to use a new file for improved branding consistency.

--- a/templates/index.html
+++ b/templates/index.html
@@ -180,7 +180,7 @@
     </main>
     <footer>
         <div class="footer__body wrap_1000">
-            <a href="#home" class="logo"><img src="images/profile.JPG" alt="profile"></a>
+            <a href="#home" class="logo"><img src="images/footer_logo.png" alt="profile"></a>
             <p>$copy;ryusei</p>
         </div>
     </footer>
