Remove Google Maps link and clear telephone number in index.html for updated contact information.

--- a/templates/index.html
+++ b/templates/index.html
@@ -169,9 +169,9 @@
                         <p>
                         </p>
                         <p>
-                            <a href="https://www.google.com/maps/place/%E6%B0%B8%E7%94%B0%E7%94%BA%E3%83%93%E3%83%AB10F/@35.6640626,139.7530958,17z/data=!3m1!4b1!4m6!3m5!1s0x60188b75e4656e1b:0x5396107219551c0!8m2!3d35.6640626!4d139.7552845!16s%2Fg%2F11c402xjzn?entry=ttu&g_ep=EgoyMDI1MDIxMi4wIKXMDSoASAFQAw%3D%3D">GoogleMapで見る</a>
+                            <!-- <a href="https://www.google.com/maps/place/%E6%B0%B8%E7%94%B0%E7%94%BA%E3%83%93%E3%83%AB10F/@35.6640626,139.7530958,17z/data=!3m1!4b1!4m6!3m5!1s0x60188b75e4656e1b:0x5396107219551c0!8m2!3d35.6640626!4d139.7552845!16s%2Fg%2F11c402xjzn?entry=ttu&g_ep=EgoyMDI1MDIxMi4wIKXMDSoASAFQAw%3D%3D">GoogleMapで見る</a> -->
                         </p>
-                        <p class="tel">tel:<span>03-3262-8000</span></p>
+                        <p class="tel">tel:<span></span></p>
                     </div>
                     <p><img src="img/access.png" alt="アクセス"></p>
                 </div>
